[gd_scene load_steps=12 format=3 uid="uid://bjwuhfb2wcj1x"]

[ext_resource type="Script" path="res://examples/doom_like_fps/player/Player.gd" id="1_diqix"]
[ext_resource type="Script" path="res://addons/godot_gameplay_systems/inventory_system/nodes/equipped_item_3d.gd" id="2_jwtl3"]
[ext_resource type="Script" path="res://addons/godot_gameplay_systems/attributes_and_abilities/nodes/gameplay_attribute_map.gd" id="2_pwjr5"]
[ext_resource type="Script" path="res://addons/godot_gameplay_systems/attributes_and_abilities/resources/attribute.gd" id="3_gseup"]
[ext_resource type="Resource" uid="uid://2s6702ugdpni" path="res://examples/doom_like_fps/doom_like_pg_fps_attributes.tres" id="4_fxibq"]
[ext_resource type="Script" path="res://addons/godot_gameplay_systems/inventory_system/nodes/equipment.gd" id="5_pje3c"]
[ext_resource type="Script" path="res://addons/godot_gameplay_systems/camera_shake/nodes/camera_shake.gd" id="8_ofxhn"]
[ext_resource type="Script" path="res://examples/doom_like_fps/player/hud.gd" id="10_wtnkq"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3660s"]

[sub_resource type="Resource" id="Resource_ogent"]
script = ExtResource("3_gseup")
attribute_name = "health"
minimum_value = 0.0
maximum_value = 100.0
current_value = 100.0

[sub_resource type="Resource" id="Resource_r7g6h"]
script = ExtResource("3_gseup")
attribute_name = "armor"
minimum_value = 0.0
maximum_value = 100.0
current_value = 0.0

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_diqix")

[node name="CameraNeck" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="CameraNeck"]

[node name="RightHand" type="Node3D" parent="CameraNeck/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.491126, -0.350933, -0.794641)
script = ExtResource("2_jwtl3")
equipment_path = NodePath("../../../Equipment")
tags_to_display = Array[String](["right.handed"])

[node name="LeftHand" type="Node3D" parent="CameraNeck/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.630821, -0.350933, -0.794641)
script = ExtResource("2_jwtl3")
equipment_path = NodePath("../../../Equipment")
tags_to_display = Array[String](["left.handed"])

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_3660s")

[node name="GameplayAttributeMap" type="Node" parent="."]
script = ExtResource("2_pwjr5")
owning_character = NodePath("..")
attributes = Array[ExtResource("3_gseup")]([SubResource("Resource_ogent"), SubResource("Resource_r7g6h")])
table = ExtResource("4_fxibq")

[node name="Equipment" type="Node" parent="."]
script = ExtResource("5_pje3c")
owner_path = NodePath("..")
gameplay_equip_automatically = true

[node name="Hud" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_wtnkq")

[node name="ItemLog" type="VBoxContainer" parent="Hud"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Hud"]
layout_mode = 2
size_flags_vertical = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Hud/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Health" type="ProgressBar" parent="Hud/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="Armor" type="ProgressBar" parent="Hud/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="HBoxContainer" type="HBoxContainer" parent="Hud/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="Hud/HBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="WeaponIcon" type="TextureRect" parent="Hud/HBoxContainer/HBoxContainer/AspectRatioContainer"]
layout_mode = 2

[node name="CameraShake" type="Node" parent="."]
script = ExtResource("8_ofxhn")
camera_path = NodePath("../CameraNeck/Camera3D")
max_strength = 1.0
max_frequency = 10
